--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "audit": "npm audit fix",
     "update": "npm update",
     "postinstall": "cp -r node_modules/blockly/media public/media",
-    "start": "concurrently \"react-scripts start\" \"./api.sh\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
